--- a/package.json
+++ b/package.json
@@ -4,19 +4,27 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-install": "^2.1.0",
+    "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "jsdom": "^16.2.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.8",
     "mongoose-autopopulate": "^0.12.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.11"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "nodemon": "^1.19.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
